Update man pages and completions

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -37,7 +37,7 @@ Interact with stacks, which are ready\-to\-use product combinations
 stackctl\-services(1)
 Interact with deployed services of products
 .TP
-stackctl\-demos(1)
+stackctl\-demo(1)
 Interact with demos, which are end\-to\-end usage demonstrations of the Stackable data platform
 .TP
 stackctl\-completions(1)
