Update completions and man pages

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -4,7 +4,7 @@
 .SH NAME
 stackctl
 .SH SYNOPSIS
-\fBstackctl\fR [\fB\-l\fR|\fB\-\-log\-level\fR] [\fB\-n\fR|\fB\-\-namespace\fR] [\fB\-h\fR|\fB\-\-help\fR] [\fB\-V\fR|\fB\-\-version\fR] <\fIsubcommands\fR>
+\fBstackctl\fR [\fB\-l\fR|\fB\-\-log\-level\fR] [\fB\-n\fR|\fB\-\-namespace\fR] [\fB\-\-additional\-demo\-files\fR] [\fB\-h\fR|\fB\-\-help\fR] [\fB\-V\fR|\fB\-\-version\fR] <\fIsubcommands\fR>
 .SH DESCRIPTION
 .SH OPTIONS
 .TP
@@ -17,6 +17,9 @@ Log level this application uses
 .TP
 \fB\-n\fR, \fB\-\-namespace\fR=\fINAMESPACE\fR [default: stackable]
 Namespace in the cluster used to deploy the products and operators
+.TP
+\fB\-\-additional\-demo\-files\fR=\fIADDITIONAL_DEMO_FILES\fR
+
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 Print help
