Start to implement tracing

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -8,12 +8,8 @@ stackctl
 .SH DESCRIPTION
 .SH OPTIONS
 .TP
-\fB\-l\fR, \fB\-\-log\-level\fR=\fILOG_LEVEL\fR [default: warn]
+\fB\-l\fR, \fB\-\-log\-level\fR=\fILOG_LEVEL\fR
 Log level this application uses
-.br
-
-.br
-[\fIpossible values: \fRerror, warn, info, debug, trace]
 .TP
 \fB\-n\fR, \fB\-\-namespace\fR=\fINAMESPACE\fR [default: stackable]
 Namespace in the cluster used to deploy the products and operators
