Add cache commands

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -82,6 +82,9 @@ Interact with demos, which are end\-to\-end usage demonstrations of the Stackabl
 stackctl\-completions(1)
 Generate shell completions for this tool
 .TP
+stackctl\-cache(1)
+Interact with locally cached files
+.TP
 stackctl\-help(1)
 Print this message or the help of the given subcommand(s)
 .SH VERSION
