--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -1,10 +1,10 @@
 .ie \n(.g .ds Aq \(aq
 .el .ds Aq '
-.TH stackctl 1  "stackctl 0.0.1" 
+.TH stackablectl 1  "stackablectl 0.0.1" 
 .SH NAME
-stackctl
+stackablectl
 .SH SYNOPSIS
-\fBstackctl\fR [\fB\-l\fR|\fB\-\-log\-level\fR] [\fB\-\-no\-cache\fR] [\fB\-\-offline\fR] [\fB\-n\fR|\fB\-\-namespace\fR] [\fB\-d\fR|\fB\-\-demo\-file\fR] [\fB\-s\fR|\fB\-\-stack\-file\fR] [\fB\-r\fR|\fB\-\-release\-file\fR] [\fB\-h\fR|\fB\-\-help\fR] [\fB\-V\fR|\fB\-\-version\fR] <\fIsubcommands\fR>
+\fBstackablectl\fR [\fB\-l\fR|\fB\-\-log\-level\fR] [\fB\-\-no\-cache\fR] [\fB\-\-offline\fR] [\fB\-n\fR|\fB\-\-namespace\fR] [\fB\-d\fR|\fB\-\-demo\-file\fR] [\fB\-s\fR|\fB\-\-stack\-file\fR] [\fB\-r\fR|\fB\-\-release\-file\fR] [\fB\-h\fR|\fB\-\-help\fR] [\fB\-V\fR|\fB\-\-version\fR] <\fIsubcommands\fR>
 .SH DESCRIPTION
 .SH OPTIONS
 .TP
@@ -14,8 +14,8 @@ Log level this application uses
 \fB\-\-no\-cache\fR
 Do not cache the remote (default) demo, stack and release files
 
-Cached files are saved at \*(Aq$XDG_CACHE_HOME/stackctl\*(Aq, which is usually
-\*(Aq$HOME/.cache/stackctl\*(Aq when not explicitly set.
+Cached files are saved at \*(Aq$XDG_CACHE_HOME/stackablectl\*(Aq, which is usually
+\*(Aq$HOME/.cache/stackablectl\*(Aq when not explicitly set.
 .TP
 \fB\-\-offline\fR
 Do not request any remote files via the network
@@ -64,28 +64,28 @@ Print help (see a summary with \*(Aq\-h\*(Aq)
 Print version
 .SH SUBCOMMANDS
 .TP
-stackctl\-operator(1)
+stackablectl\-operator(1)
 Interact with single operator instead of the full platform
 .TP
-stackctl\-release(1)
+stackablectl\-release(1)
 Interact with all operators of the platform which are released together
 .TP
-stackctl\-stack(1)
+stackablectl\-stack(1)
 Interact with stacks, which are ready\-to\-use product combinations
 .TP
-stackctl\-services(1)
+stackablectl\-services(1)
 Interact with deployed services of products
 .TP
-stackctl\-demo(1)
+stackablectl\-demo(1)
 Interact with demos, which are end\-to\-end usage demonstrations of the Stackable data platform
 .TP
-stackctl\-completions(1)
+stackablectl\-completions(1)
 Generate shell completions for this tool
 .TP
-stackctl\-cache(1)
+stackablectl\-cache(1)
 Interact with locally cached files
 .TP
-stackctl\-help(1)
+stackablectl\-help(1)
 Print this message or the help of the given subcommand(s)
 .SH VERSION
 v0.0.1
