Continue demo/stack/release handling

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -45,7 +45,7 @@ stacks with the same name, the last stack definition will be used.
 Use "stackablectl \-s path/to/stacks1.yaml \-s path/to/stacks2.yaml [OPTIONS] <COMMAND>"
 to provide multiple additional stack files.
 .TP
-\fB\-r\fR, \fB\-\-release\-file\fR=\fIRELEASE_FILE\fR
+\fB\-r\fR, \fB\-\-release\-file\fR=\fIRELEASE_FILES\fR
 Provide one or more additional (custom) release file(s)
     
 Releases are loaded in the following order: Remote (default) release file,
