Add operator install command

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -20,7 +20,7 @@ Cached files are saved at \*(Aq$XDG_CACHE_HOME/stackablectl\*(Aq, which is usual
 \fB\-\-offline\fR
 Do not request any remote files via the network
 .TP
-\fB\-n\fR, \fB\-\-namespace\fR=\fINAMESPACE\fR [default: stackable]
+\fB\-n\fR, \fB\-\-namespace\fR=\fINAMESPACE\fR [default: default]
 Namespace in the cluster used to deploy the products and operators
 .TP
 \fB\-d\fR, \fB\-\-demo\-file\fR=\fIDEMO_FILES\fR
