Add operator commands (#11)
* Finish demo install flow

* Add operator list command

* Improve operator listing functions

* Add YAML and JSON output to operator list command

* Add operator describe command

* Start operator install command

* Add operator install command

* Define operator_name in a central place

* Add operator installed / ls -i command

* Clippy pass

* Fix clippy warnings

* Fix failing test

* Add first round of requested changes

This commit addresses:

- https://github.com/stackabletech/stackable/pull/11#discussion_r1194807249
- https://github.com/stackabletech/stackable/pull/11#discussion_r1194839321
- https://github.com/stackabletech/stackable/pull/11#discussion_r1194849046
- https://github.com/stackabletech/stackable/pull/11#discussion_r1194849297

* Rename --namespace arg to --operators-namespace

* Rename --operators-namespace to --operator-namespace

* Adjust OperatorCmdError variants

* Remove {source} from error variant `Display`

* Add second round of requested changed

This commit addresses:

- https://github.com/stackabletech/stackable/pull/11#discussion_r1195135172
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195136932
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195149302
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195149532
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195152677
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195153450
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195153628
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195154065
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195154707
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195157632
- https://github.com/stackabletech/stackable/pull/11#discussion_r1195158428

* Remove `operator ls -i` shortcut

* Add errors when the user provides invalid cluster node counts

* Remove pluralize 

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -4,7 +4,7 @@
 .SH NAME
 stackablectl
 .SH SYNOPSIS
-\fBstackablectl\fR [\fB\-l\fR|\fB\-\-log\-level\fR] [\fB\-\-no\-cache\fR] [\fB\-\-offline\fR] [\fB\-n\fR|\fB\-\-namespace\fR] [\fB\-d\fR|\fB\-\-demo\-file\fR] [\fB\-s\fR|\fB\-\-stack\-file\fR] [\fB\-r\fR|\fB\-\-release\-file\fR] [\fB\-\-helm\-repo\-stable\fR] [\fB\-\-helm\-repo\-test\fR] [\fB\-\-helm\-repo\-dev\fR] [\fB\-h\fR|\fB\-\-help\fR] [\fB\-V\fR|\fB\-\-version\fR] <\fIsubcommands\fR>
+\fBstackablectl\fR [\fB\-l\fR|\fB\-\-log\-level\fR] [\fB\-\-no\-cache\fR] [\fB\-\-offline\fR] [\fB\-n\fR|\fB\-\-operator\-namespace\fR] [\fB\-d\fR|\fB\-\-demo\-file\fR] [\fB\-s\fR|\fB\-\-stack\-file\fR] [\fB\-r\fR|\fB\-\-release\-file\fR] [\fB\-\-helm\-repo\-stable\fR] [\fB\-\-helm\-repo\-test\fR] [\fB\-\-helm\-repo\-dev\fR] [\fB\-h\fR|\fB\-\-help\fR] [\fB\-V\fR|\fB\-\-version\fR] <\fIsubcommands\fR>
 .SH DESCRIPTION
 .SH OPTIONS
 .TP
@@ -20,7 +20,7 @@ Cached files are saved at \*(Aq$XDG_CACHE_HOME/stackablectl\*(Aq, which is usual
 \fB\-\-offline\fR
 Do not request any remote files via the network
 .TP
-\fB\-n\fR, \fB\-\-namespace\fR=\fINAMESPACE\fR [default: stackable]
+\fB\-n\fR, \fB\-\-operator\-namespace\fR=\fIOPERATOR_NAMESPACE\fR [default: default]
 Namespace in the cluster used to deploy the products and operators
 .TP
 \fB\-d\fR, \fB\-\-demo\-file\fR=\fIDEMO_FILES\fR
@@ -36,7 +36,7 @@ to provide multiple additional demo files.
 .TP
 \fB\-s\fR, \fB\-\-stack\-file\fR=\fISTACK_FILES\fR
 Provide one or more additional (custom) stack file(s)
-    
+
 Stacks are loaded in the following order: Remote (default) stack file, custom
 stack files provided via the \*(AqSTACKABLE_STACK_FILES\*(Aq environment variable, and
 lastly demo files provided via the \*(Aq\-s/\-\-stack\-file\*(Aq argument(s). If there are
@@ -47,7 +47,7 @@ to provide multiple additional stack files.
 .TP
 \fB\-r\fR, \fB\-\-release\-file\fR=\fIRELEASE_FILES\fR
 Provide one or more additional (custom) release file(s)
-    
+
 Releases are loaded in the following order: Remote (default) release file,
 custom release files provided via the \*(AqSTACKABLE_RELEASE_FILES\*(Aq environment
 variable, and lastly release files provided via the \*(Aq\-r/\-\-release\-file\*(Aq
@@ -57,13 +57,13 @@ will be used.
 Use "stackablectl \-r path/to/realeases1.yaml \-r path/to/realeases2.yaml [OPTIONS] <COMMAND>"
 to provide multiple additional stack files.
 .TP
-\fB\-\-helm\-repo\-stable\fR=\fIURL\fR [default: https://repo.stackable.tech/repository/helm\-stable]
+\fB\-\-helm\-repo\-stable\fR=\fIURL\fR [default: https://repo.stackable.tech/repository/helm\-stable/]
 Provide a custom Helm stable repository URL
 .TP
-\fB\-\-helm\-repo\-test\fR=\fIURL\fR [default: https://repo.stackable.tech/repository/helm\-test]
+\fB\-\-helm\-repo\-test\fR=\fIURL\fR [default: https://repo.stackable.tech/repository/helm\-test/]
 Provide a custom Helm test repository URL
 .TP
-\fB\-\-helm\-repo\-dev\fR=\fIURL\fR [default: https://repo.stackable.tech/repository/helm\-dev]
+\fB\-\-helm\-repo\-dev\fR=\fIURL\fR [default: https://repo.stackable.tech/repository/helm\-dev/]
 Provide a custom Helm dev repository URL
 .TP
 \fB\-h\fR, \fB\-\-help\fR
