Add stacklet description

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -83,7 +83,7 @@ stackablectl\-stack(1)
 Interact with stacks, which are ready\-to\-use product combinations
 .TP
 stackablectl\-stacklets(1)
-Interact with deployed stacklets
+Interact with deployed stacklets, which are bundles of resources and containers required to run the product
 .TP
 stackablectl\-demo(1)
 Interact with demos, which are end\-to\-end usage demonstrations of the Stackable data platform
