feat(cmds): add stacklet commands (#28)
* Initial work for service list command

* Continue services list command

* Merge branch 'main' into feature/services-cmds

* Continue stacklets list command

* Add status output

* Add product specific listing handling

* Add ListParamsExt

* Finish product-specific discovery for stacklets list command

* Adjust stacklets alias

* Unify condition output, add colored condition output

* Bump Rust version

* Update build workflow

The workflow now allows specifying the used Rust version in one place.

* Remove double @ from build workflow

* Add stacklet description

* Fix demo command

* First iteration of improved error message output

* Add numbering to list commands

* Improve error output

* Refer to operator-rs by tag instead of commit hash

* Remove Box from templating functions

* Pin rust-toolchain action version

* Fix yaml lint error

* Change stacklet command aliases

* Apply suggestions

Co-authored-by: Natalie <nat@nullable.se>

* Change stacklet command aliases

* Further improve error display

* Return struct in render_conditions function

* Improve error output when no color is used

* Remove unneeded curly brackets from snafus

---------

Co-authored-by: Natalie <nat@nullable.se>

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -82,8 +82,8 @@ Interact with all operators of the platform which are released together
 stackablectl\-stack(1)
 Interact with stacks, which are ready\-to\-use product combinations
 .TP
-stackablectl\-services(1)
-Interact with deployed services of products
+stackablectl\-stacklets(1)
+Interact with deployed stacklets, which are bundles of resources and containers required to run the product
 .TP
 stackablectl\-demo(1)
 Interact with demos, which are end\-to\-end usage demonstrations of the Stackable data platform
