--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -1,6 +1,6 @@
 .ie \n(.g .ds Aq \(aq
 .el .ds Aq '
-.TH stackablectl 1  "stackablectl 0.0.1" 
+.TH stackablectl 1  "stackablectl 0.0.0-dev" 
 .SH NAME
 stackablectl
 .SH SYNOPSIS
@@ -97,4 +97,4 @@ Interact with locally cached files
 stackablectl\-help(1)
 Print this message or the help of the given subcommand(s)
 .SH VERSION
-v0.0.1
+v0.0.0\-dev
