Add ctl README gen hook

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -51,11 +51,11 @@ Provide one or more additional (custom) release file(s)
 Releases are loaded in the following order: Remote (default) release file,
 custom release files provided via the \*(AqSTACKABLE_RELEASE_FILES\*(Aq environment
 variable, and lastly release files provided via the \*(Aq\-r/\-\-release\-file\*(Aq
-argument(s). If there are releases with the same name, the last stack definition
-will be used.
+argument(s). If there are releases with the same name, the last release
+definition will be used.
 
-Use "stackablectl \-r path/to/realeases1.yaml \-r path/to/realeases2.yaml [OPTIONS] <COMMAND>"
-to provide multiple additional stack files.
+Use "stackablectl \-r path/to/releases1.yaml \-r path/to/releases2.yaml [OPTIONS] <COMMAND>"
+to provide multiple additional release files.
 .TP
 \fB\-\-helm\-repo\-stable\fR=\fIURL\fR [default: https://repo.stackable.tech/repository/helm\-stable/]
 Provide a custom Helm stable repository URL
