Make namespaces configurable for all sub commands

--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -55,7 +55,7 @@ Use "stackablectl [OPTIONS] <COMMAND> \-r path/to/releases1.yaml \-r path/to/rel
 to provide multiple additional release files.
 .TP
 \fB\-\-helm\-repo\-stable\fR=\fIURL\fR [default: https://repo.stackable.tech/repository/helm\-stable/]
-
+Provide a custom Helm stable repository URL
 .TP
 \fB\-\-helm\-repo\-test\fR=\fIURL\fR [default: https://repo.stackable.tech/repository/helm\-test/]
 Provide a custom Helm test repository URL
