--- a/docs/modules/stackablectl/pages/index.adoc
+++ b/docs/modules/stackablectl/pages/index.adoc
@@ -53,4 +53,4 @@ the needed Stackable release.
 You can browse the available demos xref:demos/index.adoc[on the demo page]. We currently offer the following list of
 demos:
 
-include::partial$demos.adoc[]
+// include::partial$demos.adoc[]
