--- a/docs/modules/stackablectl/pages/index.adoc
+++ b/docs/modules/stackablectl/pages/index.adoc
@@ -1,40 +1,39 @@
 = stackablectl
 
-The `stackablectl` command line tool is used to interact with the Stackable data platform. It can install individual
-operators as well as platform releases. It also ships with a set of pre-built xref:commands/demo.adoc[`demo`] that
-utilize different data products of the Platform to get e.g. an end-to-end data pipeline.
+The `stackablectl` command line tool interacts with the Stackable data platform. It can install individual
+operators as well as platform releases. It also ships with a set of pre-built xref:commands/demo.adoc[`demos`] that
+utilize different data products of the Platform, e.g. an end-to-end data pipeline.
 
-The installation of `stackablectl` is described in xref:installation.adoc[]. To just get started, please follow
-xref:quickstart.adoc[].
+The installation of `stackablectl` is described in xref:installation.adoc[installation guide]. To get started, please
+follow the xref:quickstart.adoc[quickstart guide].
 
-In general, use `stackablectl --help` to find out more about how to use the tool or how to use specific options. This
-also works with subcommands, i.e. `stackablectl release install --help` will show the help for installing a release.
-Often you can also use an abbreviation instead of typing out all of the commands. E.g. `stackablectl operator list` can
-also be written as `stackablectl op ls`
+In general, use `stackablectl --help` to find out more about how to use the tool or specific options. Every subcommand
+supports the help flag. For example, `stackablectl release install --help` will show the usage test for installing a
+release. You can also use an abbreviation instead of typing out the complete commands. E.g. `stackablectl operator list`
+can also be written as `stackablectl op ls`
 
-A Kubernetes cluster is required in order to use the Stackable Data Platform as all products and operators run on
-Kubernetes. If you don't have a Kubernetes cluster, `stackablectl` can spin up a https://kind.sigs.k8s.io/[kind]
-Kubernetes Cluster for you.
+A Kubernetes cluster is required to use the Stackable Data Platform, as all products and operators run on Kubernetes. If
+you don't have a Kubernetes cluster, `stackablectl` can spin up a https://kind.sigs.k8s.io/[kind] Kubernetes Cluster for
+you.
 
-The deployed services are separated into three different layers as illustrated below:
+The deployed services are separated into three different layers, as illustrated below:
 
 image::layers.png[Layers of the deployed services]
 
 == Operators
 
-This layer consists of Stackable operators managing the individual data products. They can either be installed one by
-one with the xref:commands/operator.adoc[`operator`] command or from a release with the
-xref:commands/release.adoc[`release`] command which is recommended way. A release is a well-playing bundle of operators
-that has been extensively tested by Stackable.
+This layer consists of Stackable operators managing the individual data products. They can be installed one by one with
+the xref:commands/operator.adoc[`operator`] command or from a release with the xref:commands/release.adoc[`release`]
+command, which is recommended. A release is a well-playing bundle of operators that Stackable has extensively tested.
 
 == Stacks
 
-A stack is a collection of ready-to-use Stackable data products as well as needed third-party services like Postgresql
-or MinIO.
+A stack is a collection of ready-to-use Stackable data products and required third-party services like Postgresql or
+MinIO.
 
 Stacks are installed with the xref:commands/stack.adoc[`stack`] command. A stack needs a release (of Stackable
-operators) to run on. To achieve this a stacks has a dependency on a release which gets automatically installed when a
-stack is installed.
+operators) to run on. That's why a stack depends on a release, which gets automatically installed when a stack is
+installed.
 
 == Demos
 
@@ -47,11 +46,11 @@ A demo is an end-to-end demonstration of the usage of the Stackable data platfor
 .. Process test data
 .. Visualize results (optional)
 
-Demos are installed with the xref:commands/demo.adoc[`demo`] command. A demo needs a stack to run on. To achieve this a
-demo has a dependency on a stack which gets automatically installed when a demo is installed. The stack in turn will
-install the needed Stackable release.
+Demos are installed with the xref:commands/demo.adoc[`demo`] command. A demo needs a stack to run on. That's why a demo
+depends on a stack, which gets automatically installed when a demo is installed. The stack, in turn, will install the
+needed Stackable release.
 
-You can browse the available demos xref:demos/index.adoc[on the demo page]. We currently offer the following list of
+You can browse the available demos on the xref:demos/index.adoc[demo] page. We currently offer the following list of
 demos:
 
 include::partial$demos.adoc[]
