--- a/docs/modules/stackablectl/pages/commands/demo.adoc
+++ b/docs/modules/stackablectl/pages/commands/demo.adoc
@@ -140,8 +140,8 @@ $ stackablectl demo install trino-taxi-data
 
 If you don't have a Kubernetes cluster available, `stackablectl` can spin up a https://kind.sigs.k8s.io/[kind] or
 https://minikube.sigs.k8s.io/docs/[minikube] Kubernetes cluster for you. Based on the type of local cluster you want to
-use, make sure you have either `kind` or `minikube` installed on your system. `stackablectl` will perform a check to
-verify that these tools are available in your `PATH` and will additionally check if Docker is running.
+use, ensure you have either `kind` or `minikube` installed on your system. `stackablectl` will perform a check to verify
+that these tools are available in your `PATH` and  check if Docker is running.
 
 ==== Local Kind Kubernetes Cluster
 
@@ -220,9 +220,9 @@ Use "stackablectl stacklet list" to display the installed stacklets
 
 '''
 
-The demos create Kubernetes jobs, that will populate test data and interact with the installed products to process the
-data. Until the products are ready, it is completely normal that the pods of these Jobs will fail with an error. They
-will get retried with an exponentially growing back off time. After the products are ready they should turn green and
+The demos create Kubernetes jobs that will populate test data and interact with the installed products to process the
+data. Until the products are ready, it is expected that the pods of these Jobs will fail with an error. They will get
+retried with an exponentially growing back-off time. After the products are ready, they should turn green, and
 everything should settle down.
 
 === Listing Deployed Stacklets
@@ -252,4 +252,4 @@ $ stackablectl stacklets list
 
 == Uninstalling a Demo
 
-Currently there is no support for uninstalling a demo again. However, this functionality will come in the near future.
+Currently, there is no support for uninstalling a demo again. However, this functionality will come soon.
